--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         "MONGODB_URI":"mongodb+srv://zkhigfyexuegxhtiin:vercel@vercelmongodb.bdq8bhc.mongodb.net/?retryWrites=true&w=majority"    },
     "builds": [
         {
-            "src": "package.json",
+            "src": "app.js",
             "use": "@vercel/node"
         }
     ],
